// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <progress
    class="progress other-class this-is-a-test"
    max="100"
    value="30"
  />
</DocumentFragment>
`;

exports[`Progress component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "color": null,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "responsive": undefined,
    "shadowless": false,
    "size": null,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "color": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "max": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "size": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
    "value": [Function],
  },
  "render": [Function],
}
`;

exports[`Progress component should have notification classname 1`] = `
<DocumentFragment>
  <progress
    class="progress"
    max="100"
    value="30"
  />
</DocumentFragment>
`;

exports[`Progress component should use inline styles 1`] = `
<DocumentFragment>
  <progress
    class="progress"
    max="100"
    style="width: 250px;"
    value="30"
  />
</DocumentFragment>
`;
